<resources>
    <string name="app_name">SkyCast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="celcuis_unit">C</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="search_for_place">Search For Places..</string>
    <string name="fahrenheit_unit">F</string>
    <string name="kelvin_unit">K</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="current_conditions">Current Conditions</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="pascal">hPa</string>
    <string name="percent">%</string>
    <string name="meter_per_second">m/s</string>
    <string name="mile_per_hour">Mph</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="speed_unit">Speed Unit</string>
    <string name="temp_unit">Temperature Unit</string>
    <string name="clesius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="add_alert">Add Alert</string>
    <string name="couldnt_get_data">Couldn\'t Get Data</string>
    <string name="loading">Loading</string>
    <string name="no_alerts_saved">No Alerts Saved</string>
    <string name="choose_on_map">Choose on Map</string>
    <string name="select_time">Select time</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="save">Save</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="no_favorites_saved">No Favorites Saved</string>
    <string name="choose_location_source">Choose Location Source</string>
    <string name="please_choose_location_source">You Need to Choose Location Source</string>
    <string name="enabled">Enabled</string>
    <string name="notifications">Notifications</string>
    <string name="cairo_egypt">Cairo, Egypt</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="notification_type">Notification Type</string>
    <string name="not_yet_selected">Not Yet Selected</string>
    <string name="ok">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_alerts">No Alerts</string>
    <string name="location_required_error">App Needs Location Enabled to Function Correctly</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="back_online">Back Online</string>
    <string name="you_are_currently_offline">You are Currently Offline</string>
    <string name="delete_alert">Delete Alert?</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="delete_place">Delete Place?</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="app_need_location_permission_to_get_weather_data">App Need Location Permission to Get Weather Data</string>
    <string name="cancel">Cancel</string>
</resources>