<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:id="@+id/homeFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favorites"
        android:title="@string/favorites"
        android:id="@+id/favoritesFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/alert"
        android:title="@string/alerts"
        android:id="@+id/alertFragment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        android:id="@+id/settingsFragment"/>
</menu>